[gd_scene load_steps=5 format=3 uid="uid://dd0q8xxbij8at"]

[ext_resource type="Script" uid="uid://cfwu2vlocarfu" path="res://Assets/Scripts/3d_map.gd" id="1_6le5j"]
[ext_resource type="PackedScene" uid="uid://dqweao7ragffi" path="res://Resource Scenes/marker.tscn" id="3_noguo"]
[ext_resource type="PackedScene" uid="uid://d3wp6si3dh208" path="res://Resource Scenes/map_assets.tscn" id="3_qhuya"]

[sub_resource type="Environment" id="Environment_6le5j"]
background_mode = 1
background_color = Color(0.19215687, 0.19215687, 0.5372549, 1)
background_energy_multiplier = 2.66

[node name="3dMap" type="Node3D"]
script = ExtResource("1_6le5j")
CanMove = true
ClickVSDrag = 0.2

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5307627, -0.8475205, 0, 0.8475205, 0.5307627, 2.4901056, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 3.375154, 0)
environment = SubResource("Environment_6le5j")

[node name="MarkerStart" parent="." instance=ExtResource("3_noguo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7287887, 0, -2.0349045)
visible = false

[node name="MarkerEnd" parent="." instance=ExtResource("3_noguo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.55254304, 0, -2.1817756)
visible = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.94542193, 0.17465128, 0.27508962, -0.3258487, 0.5067356, 0.7981489, 0, -0.84422505, 0.53598887, 0, 0.87839746, 0)
light_energy = 2.438
shadow_enabled = true

[node name="MapAssets" parent="." instance=ExtResource("3_qhuya")]

[editable path="MapAssets"]
